--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-    content="content"="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>champion menu</title>
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link href="./styles.css" rel="stylesheet" />
